@@ -48,6 +48,7 @@ import org.cesecore.certificates.certificate.BaseCertificateData;
 import org.cesecore.certificates.certificate.CertificateDataWrapper;
 import org.cesecore.certificates.certificate.NoConflictCertificateStoreSessionLocal;
 import org.cesecore.certificates.crl.CRLData;
+import org.cesecore.certificates.crl.CrlStoreSessionLocal;
 import org.cesecore.certificates.endentity.ExtendedInformation;
 import org.cesecore.config.ExternalScriptsConfiguration;
 import org.cesecore.configuration.GlobalConfigurationSessionLocal;
@@ -64,6 +65,7 @@ import org.ejbca.core.model.ca.publisher.PublisherConst;
 import org.ejbca.core.model.ca.publisher.PublisherException;
 import org.ejbca.core.model.ca.publisher.PublisherQueueData;
 import org.ejbca.core.model.ca.publisher.PublisherQueueVolatileInformation;
+import org.ejbca.core.model.services.workers.PublishQueueProcessWorker;
 
 /**
  * Manages publisher queues which contains data to be republished, either because publishing failed or because publishing is done asynchronously.
@@ -78,6 +80,8 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
     private static final AtomicInteger beanInstanceCount = new AtomicInteger(0);
     private static volatile ExecutorService executorService = null;
     private static final String TIMEOUT_MESSAGE_INDICATOR = "timed out";
+    
+    private static final long MAX_JOBS_PER_QUEUE_WORKER = 200000L;
 
     @PersistenceContext(unitName = "ejbca")
     private EntityManager entityManager;
@@ -94,6 +98,9 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
     @EJB
     private GlobalConfigurationSessionLocal globalConfigurationSession;
 
+    @EJB
+    private CrlStoreSessionLocal crlStoreSession;
+    
     /** not injected but created in ejbCreate, since it is ourself */
     private PublisherQueueSessionLocal publisherQueueSession;
 
@@ -302,7 +309,12 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
 
     @TransactionAttribute(TransactionAttributeType.NOT_SUPPORTED)
     @Override
-    public PublishingResult plainFifoTryAlwaysLimit100EntriesOrderByTimeCreated(final AuthenticationToken admin, final BasePublisher publisher) {
+    public PublishingResult plainFifoTryAlwaysLimit100EntriesOrderByTimeCreated(final AuthenticationToken admin, final BasePublisher publisher,
+            final long maxNumberOfJobs) {   
+        if (maxNumberOfJobs > MAX_JOBS_PER_QUEUE_WORKER || maxNumberOfJobs <= 0) {
+            log.warn("Number of maxmimum jobs for the queue worker must be between 1 and " + MAX_JOBS_PER_QUEUE_WORKER + ". Using the default of "
+                    + PublishQueueProcessWorker.DEFAULT_QUEUE_WORKER_JOBS + " instead.");
+        }
         final PublishingResult result = new PublishingResult();
         PublishingResult intermediateResult;
         // Repeat this process as long as we actually manage to publish something
@@ -313,7 +325,7 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
             intermediateResult = publisherQueueSession.doChunk(admin, publisher);
             result.append(intermediateResult);
             totalCount += intermediateResult.getSuccesses();
-        } while ((intermediateResult.getSuccesses() > 0) && (totalCount < 20000));
+        } while ((intermediateResult.getSuccesses() > 0) && (totalCount < maxNumberOfJobs));
         return result;
     }
 
@@ -397,7 +409,7 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
                         log.debug("Publishing CRL");
                     }
 
-                    CRLData crlData = CRLData.findByFingerprint(entityManager, fingerprint);
+                    CRLData crlData = crlStoreSession.findByFingerprint(fingerprint);
 
                     if (crlData == null) {
                         throw new FinderException();
@@ -608,7 +620,7 @@ public class PublisherQueueSessionBean implements PublisherQueueSessionLocal {
                 Object publisherResult;
                 try {
                     final long maxTimeToWait = Math.max(1000L, deadline - System.currentTimeMillis());
-                    publisherResult = new Boolean(future.get(maxTimeToWait, TimeUnit.MILLISECONDS));
+                    publisherResult = Boolean.valueOf(future.get(maxTimeToWait, TimeUnit.MILLISECONDS));
                 } catch (Exception e) {
                     publisherResult = getAsPublisherException(e);
                 }
